--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "postinstall": "webpack -p",
+    "dev": "webpack-dev-server --mode development --open",
     "test": "jest",
     "test-watch": "jest --watch",
     "test-coverage": "jest --coverage"
@@ -21,9 +23,37 @@
   },
   "homepage": "https://github.com/rafaelvenegasd/marfeel_test#readme",
   "devDependencies": {
-    "jest": "^26.0.1"
+    "@babel/cli": "^7.0.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-jest": "^26.0.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^26.0.1",
+    "regenerator-runtime": "^0.13.5",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "node-static": "^0.7.11"
+    "@babel/core": "^7.9.6",
+    "@popperjs/core": "^2.4.0",
+    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.7.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
+    "node-static": "^0.7.11",
+    "popper.js": "^1.16.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
